Correct architecture. Remove dao classes from FilmDbStorageImpl class. Remove cycles from classes. Optimize classes